--- a/public/css/uber-list.css
+++ b/public/css/uber-list.css
@@ -1,1 +1,10 @@
-h4 { background-color: #c0c0c0; }
+h4 { background-color: #c0d0f0; padding-top: +2px; padding-bottom: +2px; padding-left: +2px; padding-right: +2px; }
+
+.list-item-set { opacity: 1; line-height: inherit; }
+.list-item-set.ng-hide { opacity: 0; line-height: 0; }
+.list-item-set.ng-hide-add.ng-hide-add-active,
+.list-item-set.ng-hide-remove.ng-hide-remove-active {
+  -webkit-transition: all linear 0.25s;
+  transition: all linear 0.25s;
+}
+
